# dr-llm-modelling-tests

./: EXPERIMENT_DESCRIPTION.md  PLAN.md  PROMPT.md  README.md  SUMMARY.md  TODO.md  main.py  pyproject.toml
context_hmm/: REPORT.md  fit.py
context_rl/: fit.py
context_rl_v2/: README.md  fit.py
data/: README.md  test_set.parquet  training_set.parquet
decision_tree/: fit.py
glmm/: README.md  REPORT.md  fit.py
hmm/: README.md  REPORT.md  fit.py
hybrid_glm/: README.md  fit.py
logistic_regression/: fit.py
rl_model/: README.md  fit.py
solutions/context_hmm/: README.md  fit.py
solutions/context_rl/: README.md  REPORT.md  fit.py
solutions/context_rl_v2/: REPORT.md  fit.py
solutions/decision_tree/: README.md  REPORT.md  fit.py
solutions/glmm/: fit.py
solutions/hmm/: fit.py
solutions/hybrid_glm/: REPORT.md  fit.py
solutions/logistic_regression/: README.md  REPORT.md  fit.py
solutions/rl_model/: REPORT.md  fit.py
solutions/switching_glm/: fit.py
switching_glm/: README.md  REPORT.md  fit.py
