[project]
name = "dr-llm-tests"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hmmlearn>=0.3.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
